submodulo de usuarios

--- a/TiendaComputadoras/.env.example
+++ b/TiendaComputadoras/.env.example
@@ -15,6 +15,11 @@ DB_DATABASE=tiendacomputadoras
 DB_USERNAME=root
 DB_PASSWORD=
 
+CLOUDINARY_CLOUD_NAME=dxtlbsa62
+CLOUDINARY_API_KEY=581587791526793
+CLOUDINARY_API_SECRET=RM50O8KCGminHuCI_Hpn63efDJ0
+CLOUDINARY_URL=cloudinary://581587791526793:RM50O8KCGminHuCI_Hpn63efDJ0@dxtlbsa62
+    
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
