--- a/TiendaComputadoras/composer.json
+++ b/TiendaComputadoras/composer.json
@@ -20,13 +20,13 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel-lang/common": "^6.1",
+        "laravel-lang/common": "*",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1"
-        },
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
@@ -68,6 +68,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
