--- a/TiendaComputadoras/composer.json
+++ b/TiendaComputadoras/composer.json
@@ -11,6 +11,7 @@
         "cloudinary/cloudinary_php": "^2.12",
         "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel-lang/locales": "^2.7",
         "laravel/fortify": "^1.20",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
@@ -20,7 +21,8 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel-lang/common": "*",
+        "laravel-lang/common": "^6.2",
+        "laravel-lang/publisher": "^16.3",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
