--- a/TiendaComputadoras/composer.json
+++ b/TiendaComputadoras/composer.json
@@ -17,6 +17,7 @@
         "laravel/fortify": "^1.20",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.8",
         "laraveles/spanish": "^1.5",
         "livewire/livewire": "^3.4",
