--- a/TiendaComputadoras/composer.json
+++ b/TiendaComputadoras/composer.json
@@ -25,7 +25,8 @@
         "pragmarx/google2fa-laravel": "*",
         "predis/predis": "^2.2",
         "realrashid/sweet-alert": "^7.1",
-        "darryldecode/cart": "^4.2"
+        "darryldecode/cart": "^4.2",
+         "stripe/stripe-php": "^13.18"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
